@@ -14,7 +14,7 @@
 // or the GNU Public License version 2 or later 
 // <http://www.gnu.org/copyleft/gpl.html>
 //
-// $Id: Transport.cc,v 1.1 1999/09/27 14:00:05 angus Exp $
+// $Id: Transport.cc,v 1.2 1999/09/28 09:40:02 angus Exp $
 //
 //
 
